--- a/async-race/async-race/package.json
+++ b/async-race/async-race/package.json
@@ -2,6 +2,7 @@
   "name": "async-race",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rolling-scopes-school.github.io/anstss-JSFE2021Q1/async-race/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
